Header, left menu, grid

--- a/index.html
+++ b/index.html
@@ -3,8 +3,71 @@
 <head>
 	<meta charset="UTF-8">
 	<title>test0</title>
+
+	<!--<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">-->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	
+
+
+	<div id="header">
+		<div class="column-wrapper">
+
+			<div class="center-col column">
+				<div id="search-wrap">
+					<div class="search-content">
+						<form id="search-form">
+							<input class="search-term" type="text">
+							<input class="search-button" type="submit">
+						</form>
+					</div>
+
+					<ul class="chat-content">
+						<li></li>
+						<li></li>
+					</ul>
+				</div>		
+			</div>
+
+			<div class="left-col column">
+				<a href="#">
+					<div id="logo" style=" width:130px; height:40px" ></div>
+				</a>
+			</div>
+
+			<div class="right-col column">
+				<div class="user-wrap">
+					<a class="user-info" href="#">
+						<img class="user-image" src="img/user-icon.png" height="32" width="32" />
+						<div class="user-name"><span class="clip">Maximillian Beekeeper dsdsd</span></div>				
+					</a>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+
+
+	<div class="column-wrapper">
+		<div class="center-col column grey-c">
+			center
+		</div>
+		<div class="left-col column ">
+			<ul class="left-menu-content">
+				<li><a id="feed" href="#">Feed</a></li>
+				<li><a id="asc" href="#">Asc a Collage</a></li>
+				<li><a id="companies" href="#">Companies</a></li>
+				<li><a id="service" href="#">Service Directory</a></li>
+			</ul>
+		</div>
+		<div class="right-col column grey-c">
+			right
+		</div>
+	</div>
+
+
+
+
 </body>
 </html>
