Right & center column

--- a/index.html
+++ b/index.html
@@ -1,70 +1,386 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>test0</title>
+    <meta charset="UTF-8">
+    <title>test0</title>
 
-	<!--<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">-->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">-->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 
-	<div id="header">
-		<div class="column-wrapper">
+    <div id="header">
+        <div class="column-wrapper">
 
-			<div class="center-col column">
-				<div id="search-wrap">
-					<div class="search-content">
-						<form id="search-form">
-							<input class="search-term" type="text">
-							<input class="search-button" type="submit">
-						</form>
-					</div>
+            <div class="center-col column">
+                <div id="search-wrap">
+                    <div class="search-content">
+                        <form id="search-form">
+                            <input class="search-term" type="text">
+                            <input class="search-button" type="submit">
+                        </form>
+                    </div>
 
-					<ul class="chat-content">
-						<li></li>
-						<li></li>
-					</ul>
-				</div>		
-			</div>
+                    <ul class="chat-content">
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>      
+            </div>
 
-			<div class="left-col column">
-				<a href="#">
-					<div id="logo" style=" width:130px; height:40px" ></div>
-				</a>
-			</div>
+            <div class="left-col column">
+                <a href="#">
+                    <div id="logo" style=" width:130px; height:40px" ></div>
+                </a>
+            </div>
 
-			<div class="right-col column">
-				<div class="user-wrap">
-					<a class="user-info" href="#">
-						<img class="user-image" src="img/user-icon.png" height="32" width="32" />
-						<div class="user-name"><span class="clip">Maximillian Beekeeper dsdsd</span></div>				
-					</a>
-				</div>
-			</div>
+            <div class="right-col column">
+                <div class="user-wrap">
+                    <a class="user-info" href="#">
+                        <img class="user-image" src="img/user-icon.jpg" height="32" width="32" alt=""/>
+                        <div class="user-name"><span class="clip">maximillian beekeeper dsdsd</span></div>              
+                    </a>
+                </div>
+            </div>
 
-		</div>
-	</div>
+        </div>
+    </div>
 
 
 
-	<div class="column-wrapper">
-		<div class="center-col column grey-c">
-			center
-		</div>
-		<div class="left-col column ">
-			<ul class="left-menu-content">
-				<li><a id="feed" href="#">Feed</a></li>
-				<li><a id="asc" href="#">Asc a Collage</a></li>
-				<li><a id="companies" href="#">Companies</a></li>
-				<li><a id="service" href="#">Service Directory</a></li>
-			</ul>
-		</div>
-		<div class="right-col column grey-c">
-			right
-		</div>
-	</div>
+    <div class="column-wrapper">
+        <!--CENTER COLUML START-->
+        <div class="center-col column ">
+            <div class="service-wrap">
+                <div class="service-header">
+                    <a href="#">Service Directory</a>
+                    <button>add new service</button>
+                </div>
+                <div class="service-items">
+                    <!-- row 1 -->
+                    <!-- item 1 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-1.png" alt="">
+                        </div>
+                        <a href="#">Accountancy</a>
+                    </div>
+                    <!-- item 2 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-2.png" alt="">
+                        </div>
+                        <a href="#">Associations</a>
+                    </div><a href=""></a>
+                    <!-- itme 3 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-3.png" height="67" width="67" alt="">
+                        </div>
+                        <a href="#">Buy/Sell Dental Practice</a>
+                    </div>
+                    <!-- item 4 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-4.png" height="67" width="67" alt="">
+                        </div>
+                        <a href="#">Clinical Waste Collection</a>
+                    </div>
+                    <!-- item 5 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-5.png" height="67" width="67" alt="">
+                        </div>
+                        <a href="#">Computer Service</a>
+                    </div><a href=""></a>
+                    <!-- itme 6 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-6.png" height="67" width="67" alt="">
+                        </div>
+                        <a href="#">CPR/Basic Life Support Training</a>
+                    </div>
+
+                    <!-- row 2 -->
+                    <!-- item 1 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-7.png" alt="">
+                        </div>
+                        <a href="#">Dental Recruitment</a>
+                    </div>
+                    <!-- item 2 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-8.png" alt="">
+                        </div>
+                        <a href="#">Dental Software</a>
+                    </div><a href=""></a>
+                    <!-- itme 3 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-9.png" alt="">
+                        </div>
+                        <a href="#">Electrical Safety And Testing</a>
+                    </div>
+                    <!-- item 4 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-10.png" alt="">
+                        </div>
+                        <a href="#">Marketing</a>
+                    </div>
+                    <!-- item 5 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-11.png"  alt="">
+                        </div>
+                        <a href="#">Others</a>
+                    </div><a href=""></a>
+                    <!-- itme 6 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-12.png"  alt="">
+                        </div>
+                        <a href="#">Repairs</a>
+                    </div>
+
+                    <!-- row 3 -->
+                    <!-- item 1 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-13.png" alt="">
+                        </div>
+                        <a href="#">Solicitors</a>
+                    </div>
+                    <!-- item 2 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-14.png" alt="">
+                        </div>
+                        <a href="#">Surgery Design</a>
+                    </div><a href=""></a>
+                    <!-- itme 3 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-15.png" alt="">
+                        </div>
+                        <a href="#">Training & Courses</a>
+                    </div>
+                    <!-- item 4 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-16.png" alt="">
+                        </div>
+                        <a href="#">Web Designers</a>
+                    </div>
+                    <!-- item 5 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-17.png"  alt="">
+                        </div>
+                        <a href="#">Cleaning Agencies</a>
+                    </div><a href=""></a>
+                    <!-- itme 6 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-18.png"  alt="">
+                        </div>
+                        <a href="#">Dental  Chair Recovery</a>
+                    </div>
+
+                    <!-- row 4 -->
+                    <!-- item 1 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-19.png" alt="">
+                        </div>
+                        <a href="#">Equipment Engineering</a>
+                    </div>
+                    <!-- item 2 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-20.png" alt="">
+                        </div>
+                        <a href="#">Selling Gold</a>
+                    </div><a href=""></a>
+                    <!-- item 3 -->
+                    <div class="service-item">
+                        <div class="service-img">
+                            <img src="img/icons/Shape-21.png" alt="">
+                        </div>
+                        <a href="#">Uniform & Workwear</a>
+                    </div><a href=""></a>
+                </div>
+
+            </div>
+        </div>
+        <!--CENTER COLUML END-->
+
+        <!--LEFT COLUML START-->
+        <div class="left-col column ">
+            <ul class="left-menu-content">
+                <li><a class="r" id="feed" href="#">feed</a></li>
+                <li><a id="asc" href="#">asc a collage</a></li>
+                <li><a id="companies" href="#">companies</a></li>
+                <li><a class="r" id="service" href="#">service directory additional</a></li>
+            </ul>
+            <!-- Advertisement -->
+            <div class="advertisement-block">
+                <h3>advertisement</h3>
+                <a href="#"><img src="img/adw-left.jpg" height="300" width="210" alt="Three Stars and a Crow"></a>
+                <p>ads by denteez.com</p>
+            </div>
+            <!--Featured Companies-->
+            <div class="category-wrap">
+                <div class="category-header">       
+                    <h3>fetured companies</h3>
+                    <a href="">see all</a>
+                </div>
+
+                <!--first item-->
+                <div class="item-content">
+                    <a href="#">
+                        <div class="item-image">
+                            <img src="img/companyName01.jpg" alt="" width="80" height="80">
+                        </div>
+                        <span class="r">company name dddddddddddddddd</span>
+                    </a>
+                    <div class="item-tags">manufacturer<span>Belgrade, Serbia</span>
+                        <a href="">follow now</a>
+                    </div>
+                </div>
+
+                <!--second item-->
+                <div class="item-content">
+                    <a href="#">
+                        <div class="item-image">
+                            <img src="img/companyName02.jpg" alt="" width="80" height="80">
+                        </div>
+                        <span class="r">company namddde</span>
+                    </a>
+                    <div class="item-tags">servise provider<span>New York, USA</span>
+                        <a href="">follow now</a>
+                    </div>
+                </div>  
+
+                <!--third item-->
+                <div class="item-content">
+                    <a href="#">
+                        <div class="item-image">
+                            <img src="img/companyName03.jpg" alt="" width="80" height="80">
+                        </div>
+                        <span class="r">company sdasdasdasd</span>
+                    </a>
+                    <div class="item-tags r">Supplier sdfsdfsdfsdddddddddd<span class="r">london, England asdasd</span>
+                        <a href="">follow now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <p>denteez copyright 2015</p>
+                <a href="#">terms of use</a>
+                <a href="#">private policy</a>
+            </div>
+        </div>
+        <!--LEFT COLUML END-->
+
+        <!--RIGHT COLUML START-->
+        <div class="right-col column">
+            <!--People you may know start-->
+            <div class="category-wrap">
+                <div class="category-header">       
+                    <h3>people you may know</h3>
+                    <a href="">see all</a>
+                </div>
+
+                <!--first item-->
+                <div class="item-content">
+                    <a href="#">
+                        <span class="person-name">denis adams</span>
+                        <div class="item-image">
+                            <img src="img/person01.jpg" alt="" width="80" height="80" />
+                        </div>                      
+                    </a>
+                    <div class="item-tags"><div>dentist (practice owner)</div><span>London, England</span>
+                    <a href="">follow now</a>
+                </div>
+            </div>
+
+            <!--second item-->
+            <div class="item-content">
+                <a href="#">
+                    <span class="person-name">Mary Carpenter</span>
+                    <div class="item-image">
+                        <img src="img/person02.jpg" alt="" width="80" height="80" />
+                    </div>                      
+                </a>
+                <div class="item-tags"><div>dentist (practice owner)</div><span>Belgrade, Serbia</span>
+                <a href="">follow now</a>
+            </div>
+        </div>  
+
+        <!--third item-->
+        <div class="item-content">
+            <a href="#">
+                <span class="person-name r">Danielle Salazar</span>
+                <div class="item-image">
+                    <img src="img/person03.jpg" alt="" width="80" height="80" />
+                </div>                      
+            </a>
+            <div class="item-tags"><div>dentist (practice owner)</div><span>Paris, France</span>
+            <a href="">follow now</a>
+        </div>
+    </div>
+</div>
+<!--People you may know end-->
+
+<!--Featured products start-->
+<div class="category-wrap">
+    <div class="category-header">       
+        <h3>featured products</h3>
+        <a href="">see all</a>
+    </div>
+
+    <!--first item-->
+    <div class="item-content">
+        <a href="#">
+            <span class="person-name">product name</span>
+            <div class="item-image">
+                <img src="img/product01.jpg" alt="" width="80" height="80" >
+            </div>                      
+        </a>
+        <div class="item-tags">
+            <div>Product Short Description. The quick brown fox jumps over the lazy dog.</div>
+        </div>
+    </div>
+
+    <!--second item-->
+    <div class="item-content">
+        <a href="#">
+            <span class="person-name">product name</span>
+            <div class="item-image">
+                <img src="img/product02.jpg" alt="" width="80" height="80" >
+            </div>                      
+        </a>
+        <div class="item-tags ">
+            <div>Product Short Description. The quick brown fox jumps over the lazy dog.</div>
+        </div>
+    </div>  
+</div>
+<!--Featured products end-->
+<!-- Advertisement -->
+<div class="advertisement-block">
+    <h3>advertisement</h3>
+    <a href="#"><img src="img/adw-right.jpg" height="300" width="210" alt="Three Stars and a Crow"></a>
+    <p>ads by denteez.com</p>
+</div>
+</div>
+<!--RIGHT COLUML END-->
+
+
+</div>
 
 
 
