end of first task

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>test0</title>
-
-    <!--<link rel="stylesheet" type="text/css" href="libs/bootstrap/css/bootstrap.min.css">-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -39,7 +37,7 @@
                 <div class="user-wrap">
                     <a class="user-info" href="#">
                         <img class="user-image" src="img/user-icon.jpg" height="32" width="32" alt=""/>
-                        <div class="user-name"><span class="clip">maximillian beekeeper dsdsd</span></div>              
+                        <div class="user-name r"><span class="clip">maximillian beekeeper dsdsd</span></div>              
                     </a>
                 </div>
             </div>
@@ -221,10 +219,10 @@
         <!--LEFT COLUML START-->
         <div class="left-col column ">
             <ul class="left-menu-content">
-                <li><a class="r" id="feed" href="#">feed</a></li>
-                <li><a id="asc" href="#">asc a collage</a></li>
-                <li><a id="companies" href="#">companies</a></li>
-                <li><a class="r" id="service" href="#">service directory additional</a></li>
+                <li><a id="feed" href="#">feed </a></li>
+                <li><a id="asc" href="#">asc a collage </a></li>
+                <li><a id="companies" href="#">companies </a></li>
+                <li><a id="service" href="#">service directory additional</a></li>
             </ul>
             <!-- Advertisement -->
             <div class="advertisement-block">
@@ -245,7 +243,7 @@
                         <div class="item-image">
                             <img src="img/companyName01.jpg" alt="" width="80" height="80">
                         </div>
-                        <span class="r">company name dddddddddddddddd</span>
+                        <span >company name dddddddddddddddd</span>
                     </a>
                     <div class="item-tags">manufacturer<span>Belgrade, Serbia</span>
                         <a href="">follow now</a>
@@ -258,7 +256,7 @@
                         <div class="item-image">
                             <img src="img/companyName02.jpg" alt="" width="80" height="80">
                         </div>
-                        <span class="r">company namddde</span>
+                        <span >company namddde</span>
                     </a>
                     <div class="item-tags">servise provider<span>New York, USA</span>
                         <a href="">follow now</a>
@@ -271,7 +269,7 @@
                         <div class="item-image">
                             <img src="img/companyName03.jpg" alt="" width="80" height="80">
                         </div>
-                        <span class="r">company sdasdasdasd</span>
+                        <span >company sdasdasdasd</span>
                     </a>
                     <div class="item-tags r">Supplier sdfsdfsdfsdddddddddd<span class="r">london, England asdasd</span>
                         <a href="">follow now</a>
@@ -311,7 +309,7 @@
             <!--second item-->
             <div class="item-content">
                 <a href="#">
-                    <span class="person-name">Mary Carpenter</span>
+                    <span class="person-name">Mary Carpenter Aditional text is here</span>
                     <div class="item-image">
                         <img src="img/person02.jpg" alt="" width="80" height="80" />
                     </div>                      
@@ -382,8 +380,7 @@
 
 </div>
 
-
-
-
+<script src="js/bower_components/jquery/dist/jquery.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
